Redid enrichment analysis.DEG, DEMG, UMSMG_DEMG, and NSMG_DEMG.

--- a/enrichment_analysis/combined_ea.ipynb
+++ b/enrichment_analysis/combined_ea.ipynb
@@ -2,9 +2,162 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "\n",
+      "\n",
+      "clusterProfiler v3.18.0  For help: https://guangchuangyu.github.io/software/clusterProfiler\n",
+      "\n",
+      "If you use clusterProfiler in published research, please cite:\n",
+      "Guangchuang Yu, Li-Gen Wang, Yanyan Han, Qing-Yu He. clusterProfiler: an R package for comparing biological themes among gene clusters. OMICS: A Journal of Integrative Biology. 2012, 16(5):284-287.\n",
+      "\n",
+      "\n",
+      "Attaching package: 'clusterProfiler'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:purrr':\n",
+      "\n",
+      "    simplify\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    filter\n",
+      "\n",
+      "\n",
+      "Loading required package: AnnotationDbi\n",
+      "\n",
+      "Loading required package: stats4\n",
+      "\n",
+      "Loading required package: BiocGenerics\n",
+      "\n",
+      "\n",
+      "Attaching package: 'BiocGenerics'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:parallel':\n",
+      "\n",
+      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
+      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
+      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:dplyr':\n",
+      "\n",
+      "    combine, intersect, setdiff, union\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    IQR, mad, sd, var, xtabs\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    Filter, Find, Map, Position, Reduce, anyDuplicated, append,\n",
+      "    as.data.frame, basename, cbind, colnames, dirname, do.call,\n",
+      "    duplicated, eval, evalq, get, grep, grepl, intersect, is.unsorted,\n",
+      "    lapply, mapply, match, mget, order, paste, pmax, pmax.int, pmin,\n",
+      "    pmin.int, rank, rbind, rownames, sapply, setdiff, sort, table,\n",
+      "    tapply, union, unique, unsplit, which.max, which.min\n",
+      "\n",
+      "\n",
+      "Loading required package: Biobase\n",
+      "\n",
+      "Welcome to Bioconductor\n",
+      "\n",
+      "    Vignettes contain introductory material; view with\n",
+      "    'browseVignettes()'. To cite Bioconductor, see\n",
+      "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
+      "\n",
+      "\n",
+      "Loading required package: IRanges\n",
+      "\n",
+      "Loading required package: S4Vectors\n",
+      "\n",
+      "\n",
+      "Attaching package: 'S4Vectors'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:clusterProfiler':\n",
+      "\n",
+      "    rename\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:dplyr':\n",
+      "\n",
+      "    first, rename\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:tidyr':\n",
+      "\n",
+      "    expand\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:base':\n",
+      "\n",
+      "    expand.grid\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'IRanges'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:clusterProfiler':\n",
+      "\n",
+      "    slice\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:dplyr':\n",
+      "\n",
+      "    collapse, desc, slice\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:purrr':\n",
+      "\n",
+      "    reduce\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'AnnotationDbi'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:clusterProfiler':\n",
+      "\n",
+      "    select\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:dplyr':\n",
+      "\n",
+      "    select\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(clusterProfiler)\n",
@@ -21,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +233,13 @@
    ],
    "source": [
     "matrisome_df <- load_matrisome_df(paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\"))\n",
-    "gene2id_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/hugo2entrez.tsv\"))"
+    "gene2id_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/hugo2entrez.tsv\"))\n",
+    "# figo_genes <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
+    "deg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_deg_list.txt\"))\n",
+    "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
+    "nsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_hub_thresh_\", hub_con_thresh, \"_demg_list.txt\"))\n",
+    "umsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))\n",
+    "survival_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_demg_list.txt\"))"
    ]
   },
   {
@@ -92,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dge_genes <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_dge_gene_list.txt\"))\n",
-    "dge_genes_df <- dge_genes %>%\n",
+    "deg_df <- deg_list %>%\n",
     "    as_tibble_col(column_name = \"geneID\") %>%\n",
     "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))\n",
-    "dge_m_genes_df <- dge_genes_df %>%\n",
-    "    dplyr::filter(geneID %in% matrisome_df$gene_symbol)"
+    "demg_df <- demg_list %>%\n",
+    "    as_tibble_col(column_name = \"geneID\") %>%\n",
+    "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
    ]
   },
   {
@@ -113,25 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dge_go_res <- enrichGO(dge_genes_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)\n",
-    "dge_m_go_res <- enrichGO(\n",
-    "    dge_m_genes_df$entrez_gene_id,\n",
-    "    \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE\n",
-    ")"
+    "deg_go <- enrichGO(deg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)\n",
+    "demg_go <- enrichGO(demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dge_go_df <- make_ea_df(dge_go_res, ea_type = \"GO\")\n",
-    "dge_m_go_df <- make_ea_df(dge_m_go_res, ea_type = \"GO\")"
+    "deg_go_df <- make_ea_df(deg_go, ea_type = \"GO\")\n",
+    "demg_go_df <- make_ea_df(demg_go, ea_type = \"GO\")"
    ]
   },
   {
@@ -143,25 +299,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reading KEGG annotation online:\n",
+      "\n",
+      "\n",
+      "Reading KEGG annotation online:\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "dge_kegg_res <- enrichKEGG(dge_genes_df$entrez_gene_id, organism = \"hsa\")\n",
-    "dge_m_kegg_res <- enrichKEGG(\n",
-    "    dge_m_genes_df$entrez_gene_id,\n",
-    "    organism = \"hsa\"\n",
-    ")"
+    "deg_kegg <- enrichKEGG(deg_df$entrez_gene_id, organism = \"hsa\")\n",
+    "demg_kegg <- enrichKEGG(demg_df$entrez_gene_id, organism = \"hsa\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dge_kegg_df <- make_ea_df(dge_kegg_res, ea_type = \"KEGG\")\n",
-    "dge_m_kegg_df <- make_ea_df(dge_m_kegg_res, ea_type = \"KEGG\")"
+    "deg_kegg_df <- make_ea_df(deg_kegg, ea_type = \"KEGG\")\n",
+    "demg_kegg_df <- make_ea_df(demg_kegg, ea_type = \"KEGG\")"
    ]
   },
   {
@@ -173,28 +339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_tsv(\n",
-    "    dge_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_DEG_all_gene_set.tsv\"),\n",
+    "    deg_go_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_deg_go.tsv\"),\n",
     ")\n",
     "\n",
     "write_tsv(\n",
-    "    dge_m_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_DEG_matrisome_gene_set.tsv\")\n",
+    "    deg_kegg_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_deg_kegg.tsv\"),\n",
     ")\n",
     "\n",
     "write_tsv(\n",
-    "    dge_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_DEG_all_pathway.tsv\")\n",
+    "    demg_go_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_demg_go.tsv\"),\n",
     ")\n",
     "\n",
     "write_tsv(\n",
-    "    dge_m_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_DEG_matrisome_pathway.tsv\")\n",
+    "    demg_kegg_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_demg_kegg.tsv\"),\n",
     ")"
    ]
   },
@@ -207,12 +373,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_genes <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
-    "figo_genes_df <- figo_genes %>%\n",
+    "umsmg_demg_df <- umsmg_demg_list %>%\n",
+    "    as_tibble_col(column_name = \"geneID\") %>%\n",
+    "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))\n",
+    "\n",
+    "nsmg_demg_df <- nsmg_demg_list %>%\n",
     "    as_tibble_col(column_name = \"geneID\") %>%\n",
     "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
    ]
@@ -226,20 +395,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_go_res <- enrichGO(figo_genes_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
+    "umsmg_demg_go <- enrichGO(umsmg_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)\n",
+    "nsmg_demg_go <- enrichGO(nsmg_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_go_df <- make_ea_df(figo_go_res, ea_type = \"GO\")"
+    "umsmg_demg_go_df <- make_ea_df(umsmg_demg_go, ea_type = \"GO\")\n",
+    "nsmg_demg_go_df <- make_ea_df(nsmg_demg_go, ea_type = \"GO\")"
    ]
   },
   {
@@ -251,36 +422,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_kegg_res <- enrichKEGG(figo_genes_df$entrez_gene_id, organism = \"hsa\")"
+    "umsmg_demg_kegg <- enrichKEGG(umsmg_demg_df$entrez_gene_id, organism = \"hsa\")\n",
+    "nsmg_demg_kegg <- enrichKEGG(nsmg_demg_df$entrez_gene_id, organism = \"hsa\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_kegg_df <- make_ea_df(figo_kegg_res, ea_type = \"KEGG\")"
+    "umsmg_demg_kegg_df <- make_ea_df(umsmg_demg_kegg, ea_type = \"KEGG\")\n",
+    "nsmg_demg_kegg_df <- make_ea_df(nsmg_demg_kegg, ea_type = \"KEGG\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_tsv(\n",
-    "    figo_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_figo_gene_set.tsv\")\n",
+    "    umsmg_demg_go_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_umsmg_demg_go.tsv\")\n",
     ")\n",
     "\n",
     "write_tsv(\n",
-    "    figo_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_figo_pathway.tsv\")\n",
+    "    nsmg_demg_go_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_nsmg_demg_go.tsv\")\n",
+    ")\n",
+    "\n",
+    "write_tsv(\n",
+    "    umsmg_demg_kegg_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_umsmg_demg_kegg.tsv\")\n",
+    ")\n",
+    "\n",
+    "write_tsv(\n",
+    "    nsmg_demg_kegg_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_nsmg_demg_kegg.tsv\")\n",
     ")"
    ]
   },
@@ -293,12 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_genes <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
-    "survival_genes_df <- survival_genes %>%\n",
+    "survival_demg_df <- survival_demg_list %>%\n",
     "    as_tibble_col(column_name = \"geneID\") %>%\n",
     "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
    ]
@@ -312,20 +501,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_go_res <- enrichGO(survival_genes_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
+    "survival_demg_go <- enrichGO(survival_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_go_df <- make_ea_df(survival_go_res, ea_type = \"GO\")"
+    "survival_demg_go_df <- make_ea_df(survival_demg_go, ea_type = \"GO\")"
    ]
   },
   {
@@ -337,37 +526,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_kegg_res <- enrichKEGG(survival_genes_df$entrez_gene_id, organism = \"hsa\")"
+    "survival_demg_kegg <- enrichKEGG(survival_demg_df$entrez_gene_id, organism = \"hsa\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_kegg_df <- make_ea_df(survival_kegg_res, ea_type = \"KEGG\")"
+    "survival_demg_kegg_df <- make_ea_df(survival_demg_kegg, ea_type = \"KEGG\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_tsv(\n",
-    "    survival_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_gene_set.tsv\")\n",
+    "    survival_demg_go_df,\n",
+    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_go.tsv\")\n",
     ")\n",
     "\n",
-    "write_tsv(\n",
-    "    survival_kegg_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_pathway.tsv\")\n",
-    ")"
+    "if (nrow(survival_demg_kegg_df) > 0) {\n",
+    "    write_tsv(\n",
+    "        survival_demg_kegg_df,\n",
+    "        paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_kegg.tsv\")\n",
+    "    )\n",
+    "}\n"
    ]
   }
  ],
