--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3"
+    "dset_idx <- 1"
    ]
   },
   {
@@ -326,16 +326,16 @@
     {
      "data": {
       "text/html": [
-       "1007"
+       "1004"
       ],
       "text/latex": [
-       "1007"
+       "1004"
       ],
       "text/markdown": [
-       "1007"
+       "1004"
       ],
       "text/plain": [
-       "[1] 1007"
+       "[1] 1004"
       ]
      },
      "metadata": {},
@@ -567,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Full Intersection"
+    "## Full Intersection (FIGO)"
    ]
   },
   {
@@ -580,23 +580,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intersection survival & DEMG"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survival_demg_list <- intersect(survival_list, demg_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "8229"
+       "7652"
       ],
       "text/latex": [
-       "8229"
+       "7652"
       ],
       "text/markdown": [
-       "8229"
+       "7652"
       ],
       "text/plain": [
-       "[1] 8229"
+       "[1] 7652"
       ]
      },
      "metadata": {},
@@ -605,16 +621,16 @@
     {
      "data": {
       "text/html": [
-       "618"
+       "593"
       ],
       "text/latex": [
-       "618"
+       "593"
       ],
       "text/markdown": [
-       "618"
+       "593"
       ],
       "text/plain": [
-       "[1] 618"
+       "[1] 593"
       ]
      },
      "metadata": {},
@@ -623,16 +639,16 @@
     {
      "data": {
       "text/html": [
-       "135"
+       "239"
       ],
       "text/latex": [
-       "135"
+       "239"
       ],
       "text/markdown": [
-       "135"
+       "239"
       ],
       "text/plain": [
-       "[1] 135"
+       "[1] 239"
       ]
      },
      "metadata": {},
@@ -641,16 +657,16 @@
     {
      "data": {
       "text/html": [
-       "71"
+       "232"
       ],
       "text/latex": [
-       "71"
+       "232"
       ],
       "text/markdown": [
-       "71"
+       "232"
       ],
       "text/plain": [
-       "[1] 71"
+       "[1] 232"
       ]
      },
      "metadata": {},
@@ -659,16 +675,16 @@
     {
      "data": {
       "text/html": [
-       "82"
+       "122"
       ],
       "text/latex": [
-       "82"
+       "122"
       ],
       "text/markdown": [
-       "82"
+       "122"
       ],
       "text/plain": [
-       "[1] 82"
+       "[1] 122"
       ]
      },
      "metadata": {},
@@ -677,16 +693,16 @@
     {
      "data": {
       "text/html": [
-       "44"
+       "128"
       ],
       "text/latex": [
-       "44"
+       "128"
       ],
       "text/markdown": [
-       "44"
+       "128"
       ],
       "text/plain": [
-       "[1] 44"
+       "[1] 128"
       ]
      },
      "metadata": {},
@@ -695,16 +711,16 @@
     {
      "data": {
       "text/html": [
-       "7"
+       "22"
       ],
       "text/latex": [
-       "7"
+       "22"
       ],
       "text/markdown": [
-       "7"
+       "22"
       ],
       "text/plain": [
-       "[1] 7"
+       "[1] 22"
       ]
      },
      "metadata": {},
@@ -713,16 +729,34 @@
     {
      "data": {
       "text/html": [
-       "20"
+       "99"
       ],
       "text/latex": [
-       "20"
+       "99"
       ],
       "text/markdown": [
-       "20"
+       "99"
       ],
       "text/plain": [
-       "[1] 20"
+       "[1] 99"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "63"
+      ],
+      "text/latex": [
+       "63"
+      ],
+      "text/markdown": [
+       "63"
+      ],
+      "text/plain": [
+       "[1] 63"
       ]
      },
      "metadata": {},
@@ -730,11 +764,6 @@
     }
    ],
    "source": [
-    "# length(dge_geneIDs)\n",
-    "# length(dge_m_geneIDs)\n",
-    "# length(survival_geneIDs)\n",
-    "# length(figo_geneIDs)\n",
-    "\n",
     "length(deg_list)\n",
     "length(demg_list)\n",
     "length(umsmg_list)\n",
@@ -742,7 +771,8 @@
     "length(umsmg_demg_list)\n",
     "length(nsmg_demg_list)\n",
     "length(umsmg_nsmg_demg_list)\n",
-    "length(survival_list)"
+    "length(survival_list)\n",
+    "length(survival_demg_list)"
    ]
   },
   {
@@ -754,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +795,8 @@
     "write_lines(umsmg_demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))\n",
     "write_lines(nsmg_demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_hub_thresh_\", hub_con_thresh, \"_demg_list.txt\"))\n",
     "write_lines(umsmg_nsmg_demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_nsmg_hub_thresh_\", hub_con_thresh, \"_demg_list.txt\"))\n",
-    "write_lines(survival_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_list.txt\"))"
+    "write_lines(survival_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_list.txt\"))\n",
+    "write_lines(survival_demg_list, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_demg_list.txt\"))"
    ]
   },
   {
