--- a/figures/predictive_DE_vis_v2.ipynb
+++ b/figures/predictive_DE_vis_v2.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "subsequent-cleveland",
+   "execution_count": 1,
+   "id": "strange-chambers",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -15,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "satisfied-microwave",
+   "execution_count": 2,
+   "id": "understood-diameter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "olympic-affect",
+   "execution_count": 3,
+   "id": "alive-construction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "facial-heath",
+   "execution_count": 4,
+   "id": "rotary-artwork",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_size <- 11\n",
+    "guide_size <- 1\n",
+    "family <- \"arial\"\n",
+    "dpi <- 320\n",
+    "ht <- 4\n",
+    "wd <- 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "municipal-cream",
    "metadata": {},
    "outputs": [
     {
@@ -76,21 +109,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "explicit-amount",
+   "execution_count": 6,
+   "id": "automatic-quality",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_genes <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
-    "dem_genes <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_dge_m_gene_list.txt\"))"
+    "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
+    "umsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_list.txt\"))\n",
+    "nsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_hub_thresh_\", hub_con_thresh, \"_list.txt\"))\n",
+    "figo_list <- union(umsmg_list, nsmg_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "packed-spice",
+   "execution_count": 7,
+   "id": "weird-literature",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "618"
+      ],
+      "text/latex": [
+       "618"
+      ],
+      "text/markdown": [
+       "618"
+      ],
+      "text/plain": [
+       "[1] 618"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "135"
+      ],
+      "text/latex": [
+       "135"
+      ],
+      "text/markdown": [
+       "135"
+      ],
+      "text/plain": [
+       "[1] 135"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "71"
+      ],
+      "text/latex": [
+       "71"
+      ],
+      "text/markdown": [
+       "71"
+      ],
+      "text/plain": [
+       "[1] 71"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -112,16 +201,16 @@
     {
      "data": {
       "text/html": [
-       "618"
+       "119"
       ],
       "text/latex": [
-       "618"
+       "119"
       ],
       "text/markdown": [
-       "618"
+       "119"
       ],
       "text/plain": [
-       "[1] 618"
+       "[1] 119"
       ]
      },
      "metadata": {},
@@ -129,21 +218,24 @@
     }
    ],
    "source": [
-    "length(figo_genes)\n",
-    "length(dem_genes)"
+    "length(demg_list)\n",
+    "length(umsmg_list)\n",
+    "length(nsmg_list)\n",
+    "length(figo_list)\n",
+    "length(intersect(figo_list, demg_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "sudden-smoke",
+   "execution_count": 8,
+   "id": "abstract-clearing",
    "metadata": {},
    "outputs": [],
    "source": [
     "matrisome_mem_df <- matrisome_df %>%\n",
     "    dplyr::mutate(\n",
-    "        de = geneID %in% dem_genes,\n",
-    "        predictive = geneID %in% figo_genes,\n",
+    "        de = geneID %in% demg_list,\n",
+    "        predictive = geneID %in% figo_list,\n",
     "        both = de & predictive\n",
     "    ) %>%\n",
     "    dplyr::mutate(membership = case_when(\n",
@@ -157,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "excess-impossible",
+   "execution_count": 9,
+   "id": "sized-witness",
    "metadata": {},
    "outputs": [
     {
@@ -178,23 +270,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "interior-donor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_size <- 11\n",
-    "guide_size <- 1\n",
-    "family <- \"arial\"\n",
-    "dpi <- 320\n",
-    "ht <- 4\n",
-    "wd <- 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "qualified-dialogue",
+   "execution_count": 10,
+   "id": "trying-premises",
    "metadata": {},
    "outputs": [
     {
@@ -227,13 +304,13 @@
     "        legend.title = element_blank(),\n",
     "    ) +\n",
     "    labs(y = \"Gene count\", fill = \"Membership\")\n",
-    "ggsave(paste0(dirs$figures_dir, \"/deg/\", unified_dsets[dset_idx], \"_matrisome_DEG_predictive_stacked_bp.png\"), last_plot(), height = ht, width = wd, dpi = dpi)\n"
+    "ggsave(paste0(dirs$figures_dir, \"/deg/\", unified_dsets[dset_idx], \"_figo_sig_demg_stacked_bp.png\"), last_plot(), height = ht, width = wd, dpi = dpi)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arranged-mailman",
+   "id": "hybrid-august",
    "metadata": {},
    "outputs": [],
    "source": []
