Done with everything needed for 2nd draft of paper.

--- a/figures/gene_list_inter_overlap_vis.ipynb
+++ b/figures/gene_list_inter_overlap_vis.ipynb
@@ -2,10 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "removable-boring",
+   "execution_count": 1,
+   "id": "bulgarian-excerpt",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: dplyr\n",
+      "\n",
+      "\n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "Loading required package: grid\n",
+      "\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(ggvenn)\n",
     "library(tidyverse)\n",
@@ -17,12 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "acknowledged-finder",
+   "execution_count": 2,
+   "id": "religious-anger",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dset_idx <- 1\n",
     "# hub_con_thresh <- 0.5\n",
     "# hub_con_thresh <- 0.25\n",
     "hub_con_thresh <- 0.0"
@@ -30,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dynamic-edmonton",
+   "execution_count": 3,
+   "id": "unlike-foundation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "perfect-bicycle",
+   "execution_count": 4,
+   "id": "genetic-pharmaceutical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "optimum-burden",
+   "execution_count": 5,
+   "id": "searching-glasgow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "sorted-restoration",
+   "execution_count": 6,
+   "id": "controversial-legislature",
    "metadata": {},
    "outputs": [
     {
@@ -120,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "sacred-relative",
+   "execution_count": 7,
+   "id": "precise-publicity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "comprehensive-contribution",
+   "execution_count": 8,
+   "id": "perfect-adoption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "chicken-australian",
+   "execution_count": 9,
+   "id": "automatic-blackjack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "intimate-neighbor",
+   "execution_count": 10,
+   "id": "comic-dream",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hybrid-payday",
+   "id": "arctic-proxy",
    "metadata": {},
    "outputs": [],
    "source": []
